--- a/app_flask/templates/signup.html
+++ b/app_flask/templates/signup.html
@@ -20,7 +20,7 @@
             name="first_name"
             placeholder="Enter first name"
         />
-        <label for="last_name">Full Name</label>
+        <label for="last_name">Last Name</label>
         <input
             type="text"
             class="form-control"
