--- a/app_flask/templates/client_homepage.html
+++ b/app_flask/templates/client_homepage.html
@@ -76,7 +76,7 @@
           {% endif %}
           {% if bid.bid_amount %}
           <p>Bid Amount: {{ bid.bid_amount }}</p>
-          <button class="btn btn-success "  type="button" data-bid-id="{{ bid.bid_id }}" id="accept_bid">Accept Bid</button>
+          <button class="btn btn-success accept_bid"  type="button" data-bid-id="{{ bid.bid_id }}" id="accept_bid">Accept Bid</button>
           {% endif %}
         </div>
       </div>
