--- a/app_flask/templates/mechanic_bids.html
+++ b/app_flask/templates/mechanic_bids.html
@@ -18,7 +18,7 @@
             <p>Amount: {{bid.bid_amount}}</p>
             <div class="row" >
                 <div class="col-md-6">
-                    <button type="button" class="bidForJob btn btn-outline-success" data-bid-id="{{ bid.id }}" data-mech-id="{{current_user.id}}" data-toggle="modal" data-target="#bidModal">Edit Bid</button>
+                    <button type="button" class="bidForJob btn btn-outline-success" id="editBidModal" data-id="{{ bid.id }}" data-mech-id="{{current_user.id}}" data-toggle="modal" data-target="#bidModal">Edit Bid</button>
                 </div>
                 <div class="col-md-6">
                     <button type="button" class="bidDelete btn btn-outline-danger" data-bid-id="{{ bid.id }}" data-mech-id="{{current_user.id}}">Remove Bid</button>
@@ -44,15 +44,15 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form method="POST" id="form1">
+                <form id="form1">
                     <div class="form-group">
                         <label for="formprice">Enter Bid Amount</label>
-                        <input type="number" class="form-control" name="bid_amount" id="formprice" placeholder="Amount in Ksh. eg. 5000">
+                        <input required type="number" class="form-control" name="bid_amount" id="formprice" placeholder="Amount in Ksh. eg. 5000">
                         <input type="hidden" name="mechanic_id" value="{{ current_user.id }}">
-                        <input type="hidden" id="job_id" name="job_id" class="form-control">
+                        <input type="hidden" id="bid_id" name="bid_id" class="form-control">
 
                     </div>
-                    <br><button type="submit" class="submitbutton btn btn-primary">Submit</button>
+                    <br><button type="submit" class="submitbutton btn btn-primary" id="submitBidChangeButton">Submit</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 </form>
             </div>
