--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -18,8 +18,8 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="container navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container">
       <img src="../static/images/logo.png" alt="service mtaani logo" srcset="" height="40px">
       <a class="navbar-brand" href="#">ServiceMtaani</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,8 +47,8 @@
           <button id="logout-btn" class="btn btn-outline-danger my-2 ml-sm-2" type="submit">Log Out</button>
         </form>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
   <!-- End of Navigation Bar -->
 
 
