--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="../static/styles/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet"/>
   <style>
-     
+
 
 
 
@@ -62,31 +62,34 @@
 
   <div class="container">
     {% block content %}{% endblock %}
-      <div class="page-content page-container" id="page-content">
+    <div class="page-content page-container" id="page-content">
       <div class="padding">
         <div class="row container-fluid">
-        <div class="col-lg-12 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">Featured Parts</h4>
-                  <div class="owl-carousel">
-                    {% for part in parts %}
-                    <div class="item">
-                      <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/>
-                      <p>{{ part.part_name }}<br>{{part.part_price}}</p>
-                      <a class="btn btn-primary" href="#">Order this part</a>
-                    </div>
-                    {% endfor %}
-                  </div>
+          <div class="col-lg-12 grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Featured Parts</h4>
+                <div class="owl-carousel">
+                  {% for part in parts %}
+                  <div class="item">
+                    <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/>
+                    <p>{{ part.part_name }}<br>{{part.part_price}}</p>
+                    <!-- <a href="/client/myorders" {% if request.method == 'GET' %}class="active"{% endif %}>Link 1</a> -->
+                    <!-- <a href="//myorders" {% if request.method == 'POST' %}class="active"{% endif %}>Link 2</a> -->
 
+                    <a class="btn btn-primary orderPartBtn" data-part-id="{{part.part_id}}">Order this part</a>
+                  </div>
+                  {% endfor %}
                 </div>
+
               </div>
             </div>
-            </div>
-              </div>
-            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- end of carousel -->
-    
+
     <!-- footer section -->
     <div class="container footer">
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -136,6 +139,7 @@
     <script src="https://kit.fontawesome.com/2c73e96254.js" crossorigin="anonymous"></script>
 
     <script src="../static/scripts/accept_bids.js"></script>
+    <script src="../static/scripts/ordered_parts.js"></script>
     <script src="../static/scripts/create_job.js"></script>
     <script src="../static/scripts/modal_bid.js"></script>
     <script src="../static/scripts/mechanic_homepage.js"></script>
@@ -144,7 +148,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
     <script>
       $(document).ready(function() {
-      $(".owl-carousel").owlCarousel({
+        $(".owl-carousel").owlCarousel({
           autoPlay: 3000,
           items : 4,
           itemsDesktop : [1199,3],
@@ -157,12 +161,12 @@
               items: 4
             }
           }
-      });
+        });
       });
     </script>
     <script>
       $(function(){
-      $(".owl-carousel").owlCarousel({
+        $(".owl-carousel").owlCarousel({
           items:2,
           loop:true,
           nav: true,
@@ -171,8 +175,8 @@
           autoplay:true,
           smartSpeed:700,
           autoplayHoverPause:true,
+        });
       });
-    });
     </script>
   </body>
   </html>
