--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -81,14 +81,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a id="home-link" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
-          </li>
+          </li> -->
+          <div class="hidden">
+            {{ role }}
+          </div>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="#contact">Contact Us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -140,16 +143,16 @@
             <small class="d-block mb-3 text-muted">© 2023</small>
           </div>
           <div class="col-6 col-md">
-            <h5 class="text-light">Brand</h5>
-            <ul class="list-unstyled text-small">
+            <!-- <h5 class="text-secondary">Brand</h5> -->
+            <!-- <ul class="list-unstyled text-small">
               <li><a href="#">About</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#features">Features</a></li>
               <li><a href="#testimonials">Testimonials</a></li>
-            </ul>
+            </ul> -->
           </div>
           <div class="col-6 col-md">
-            <h5 class="text-light">More</h5>
+            <h5 class="text-secondary">More</h5>
             <ul class="list-unstyled text-small">
               <li><a href="#">FAQ's</a></li>
               <li><a href="#">Privacy & Policy</a></li>
@@ -157,7 +160,7 @@
             </ul>
           </div>
           <div class="col-6 col-md">
-            <h5 class="text-light">Contact</h5>
+            <h5 id="contact" class="text-secondary">Contact</h5>
             <ul class="list-unstyled text-small">
               <li>Address: Dar-es-Salaam Rd off Enterprise Road, Industrial Area</li>
               <li>Email: info@servicemtaani.com</li>
@@ -218,5 +221,25 @@
       });
     });
     </script>
+    <!-- jQuery script -->
+<script>
+  $(document).ready(function() {
+    // Handle click event for home link
+    $('#home-link').click(function(e) {
+      e.preventDefault();  // Prevent the default link behavior
+      
+      // Perform redirection based on the user's role
+      var role = "{{ role }}"
+      console.log(role);
+      if (role === 'client') {
+        window.location.href = '/client';
+      } else if (role === 'mechanic') {
+        window.location.href = '/mechanic';
+      } else if (role === 'vendor') {
+        window.location.href = '/vendor';
+      }
+    });
+  });
+  </script>
   </body>
   </html>
